Try fixing message on mobile

--- a/css/common.css
+++ b/css/common.css
@@ -160,7 +160,7 @@
         padding: .4em;
         border-top-right-radius: .5em;
         border-bottom-right-radius: .5em;
-        padding-right: 2em;
+        padding-right: 5em;
     }
     
     .message-hidden {
